--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ video{
 .profile .photo{
 	width: 100%;
 	height: 17.952em;
-	background-color: gray;
+	background-color: #333;
 	margin:0;
 	padding: 0;
 	display: inline-block;
